# FaceCap

./: CMakeLists.txt  README.md
KLibrary/: KinectManager.cpp  KinectManager.h  OrbecManager.cpp  OrbecManager.h  SensorManager.cpp  SensorManager.h
pc/: main.cpp
src/: App.cpp  App.h  FaceCap.cpp  FaceCap.h  Mesh.cpp  Mesh.h  SLIC.cpp  Utility.cpp  Utility.h  stdafx.h
